--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hshs-robot-project",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -12,6 +12,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "hbs": "~3.1.0",
+    "mongoose": "^4.3.1",
     "morgan": "~1.6.1",
     "pg": "^4.4.3",
     "serve-favicon": "~2.3.0"
