Added experimental WebSocket motor control system
I spent the better part of the last two days trying to make it as robust and easy to work with as possible, but in the end I probably never needed it. Oh well, it's a pretty cool thing to implement anyway.
I separated some parts of the auth to make it easier to authenticate without needing a full HTTP request, and tweaked the Python motor controller to work like one expects.

--- a/camera/user.cfg
+++ b/camera/user.cfg
@@ -1,7 +1,8 @@
-anno_background false
-width 1024
+anno_background true
+width 480
 tl_interval 0
 vflip true
-annotation RPi Cam %Y.%M.%D_%h:%m:%s
+annotation  %Y-%M-%D %h:%m:%s 
 hflip true
-width 480
+anno3_custom_background_colour 1
+anno3_custom_background_Y 20
