--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "express": "^4.13.4",
+    "express-ws": "^1.0.0-rc.2",
     "hbs": "~3.1.0",
     "mongoose": "^4.3.1",
     "morgan": "~1.6.1",
     "pg": "^4.4.3",
-    "serve-favicon": "~2.3.0"
+    "router": "~4.13.1",
+    "serve-favicon": "~2.3.0",
+    "ws": "^1.0.1"
   }
 }
